<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.nav.FragmentThree">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/activity_three_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/activity_3"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/third_to_first_btn"
            app:layout_constraintEnd_toEndOf="@+id/third_to_second_btn"
            app:layout_constraintStart_toStartOf="@+id/third_to_second_btn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/third_to_first_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/to_first"
            app:layout_constraintBottom_toTopOf="@+id/third_to_second_btn"
            app:layout_constraintEnd_toEndOf="@+id/third_to_second_btn"
            app:layout_constraintStart_toStartOf="@+id/third_to_second_btn"
            app:layout_constraintTop_toBottomOf="@+id/activity_three_title" />

        <Button
            android:id="@+id/third_to_second_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_second"
            app:layout_constraintBottom_toTopOf="@+id/play_game_3_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/third_to_first_btn" />

        <Button
            android:id="@+id/play_game_3_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/colorAccent"
            android:text="@string/play_game"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/third_to_second_btn"
            app:layout_constraintStart_toStartOf="@+id/third_to_second_btn"
            app:layout_constraintTop_toBottomOf="@+id/third_to_second_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>